--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.1"
+    "@astrojs/preact": "^4.1.1",
+    "@tailwindcss/vite": "^4.1.16",
+    "astro": "^5.15.1",
+    "preact": "^10.27.2",
+    "tailwindcss": "^4.1.16"
   }
 }
