--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/preact": "^4.1.1",
+    "@astrojs/vercel": "^9.0.0",
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.1",
     "preact": "^10.27.2",
